Minor updates on some details.
mention fink, pkgcore and paludis.

--- a/portage.bib
+++ b/portage.bib
@@ -20,7 +20,7 @@ howpublished = {\url{http://devmanual.gentoo.org}} }
 
 @misc{gentoo:pms,
 title = {{Portage Package Manager Specification}},
-howpublished = {\url{https://wiki.gentoo.org/wiki/Project:Package_Manager_Specification}} }
+howpublished = {\url{https://projects.gentoo.org/pms/6/pms.pdf}} }
 
 @misc{coreos, title = {{CoreOS}}, howpublished = {\url{http://coreos.com}} }
 
@@ -35,6 +35,14 @@ howpublished = {\url{https://lwn.net/Articles/644675}} }
 @misc{chromiumos,
 title = {{Chromium OS}},
 howpublished = {\url{https://www.chromium.org}} }
+
+@misc{pkgcore,
+title = {{pkgcore}},
+howpublished = {\url{https://github.com/pkgcore/pkgcore}} }
+
+@misc{paludis,
+title = {{paludis}},
+howpublished = {\url{http://paludis.exherbo.org}} }
 
 @article{abd:xeonphi,
 author = {David Abdurachmanov and Brian Bockelman and Peter Elmer and
