Add slurm case study.

--- a/portage.bib
+++ b/portage.bib
@@ -10,6 +10,10 @@ howpublished = {\url{http://www.gentoo.org}} }
 title = {{Gentoo Prefix Project}},
 howpublished = {\url{https://wiki.gentoo.org/wiki/Project:Prefix}} }
 
+@misc{gentoo:rap,
+title = {{Gentoo Prefix with libc}},
+howpublished = {\url{https://wiki.gentoo.org/wiki/Prefix/libc}} }
+
 @misc{gentoo:portage,
 title = {{Portage package manager}},
 howpublished = {\url{https://wiki.gentoo.org/wiki/Project:Portage}} }
@@ -113,6 +117,15 @@ howpublished = {\url{http://root.cern.ch}} }
 @misc{pythia,
  title = {Pythia HEP Event Generator},
  howpublished = {http://home.thep.lu.se/~torbjorn/Pythia.html} }
+
+
+
+@article{cray,
+  author = {Colin A. MacLean},
+  title = {{Maintaining Large Software Stacks in a Cray Ecosystem with Gentoo Portage}author},
+  year = {2016},
+  journal = {Cray User Group}
+}
 
 @article{andrei:geantv,
   author = {John Apostolakis and René Brun and Federico Carminati and Andrei Gheata},
