include the slurm figure.

--- a/portage.tex
+++ b/portage.tex
@@ -188,7 +188,7 @@ CPUs.
 
 \begin{figure}[htb]
   \centering
-  \includegraphics[width=0.5\textwidth]{../node-slurm.eps}
+  \includegraphics[width=0.5\textwidth]{node-slurm.eps}
   \caption{User slurm is nested in site PBS Pro.  The nodes are
     allocated by PBS and 1 slurm worker runs on 1 node.
     Single-threaded jobs are controlled and queued by user slurm
