add massif example.

--- a/portage.bib
+++ b/portage.bib
@@ -48,6 +48,15 @@ howpublished = {\url{https://github.com/pkgcore/pkgcore}} }
 title = {{paludis}},
 howpublished = {\url{http://paludis.exherbo.org}} }
 
+@misc{massif,
+title = {{massif heap profiler}},
+howpublished = {\url{http://valgrind.org/docs/manual/ms-manual.html}} }
+
+@misc{massif:visualizer,
+title = {{massif visualizer}},
+howpublished = {\url{https://github.com/KDE/massif-visualizer}} }
+
+
 @article{abd:xeonphi,
 author = {David Abdurachmanov and Brian Bockelman and Peter Elmer and
           Giulio Eulisse and Robert Knight and Shahzad Muzaffar},
