skeleten for comparison to alternatives.

--- a/portage.bib
+++ b/portage.bib
@@ -136,6 +136,14 @@ howpublished = {\url{http://root.cern.ch}} }
   journal = {Cray User Group}
 }
 
+
+
+@TechReport{hsf:package,
+  author = 	 {L.~Sexton-Kennedy and B.~Hegner and B.~Viren},
+  title = 	 {{HSF Packaging Working Group Report}},
+  institution =  {FNAL, CERN, BNL},
+  year = 	 2016}
+
 @article{andrei:geantv,
   author = {John Apostolakis and René Brun and Federico Carminati and Andrei Gheata},
   title = {{Rethinking particle transport in the many-core era towards GEANT 5}},
