--- a/portage.bib
+++ b/portage.bib
@@ -14,6 +14,10 @@ howpublished = {\url{https://wiki.gentoo.org/wiki/Project:Prefix}} }
 title = {{Gentoo Prefix with libc}},
 howpublished = {\url{https://wiki.gentoo.org/wiki/Prefix/libc}} }
 
+@misc{gentoo:embedded,
+title = {{Gentoo Embedded Handbook}},
+howpublished = {\url{https://wiki.gentoo.org/wiki/Embedded_Handbook}} }
+
 @misc{gentoo:portage,
 title = {{Portage package manager}},
 howpublished = {\url{https://wiki.gentoo.org/wiki/Project:Portage}} }
